--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -40,7 +40,7 @@
     }
 
     h2 {
-      font-size: 1.2rem;
+      font-size: 1rem;
 
       @include mixins.responsive('md') {
         font-size: 1.5rem;
@@ -53,7 +53,7 @@
         -webkit-background-clip: text; 
         -webkit-text-fill-color: transparent;
         display: block;
-        font-size: 2rem;
+        font-size: 1.65rem;
         line-height: 1;
 
         @include mixins.responsive('md') {
@@ -70,8 +70,14 @@
           font-size: 60%;
         }
       }
+
       img {
         margin-top: 2rem;
+        max-width: 220px;
+
+        @include mixins.responsive('sm') {
+          max-width: 100%;
+        }
       }
     }
   }
@@ -81,8 +87,12 @@
       background: #1d1f20;
       border-radius: 10px; 
       position: relative;
-      max-width: 380px;
+      max-width: 280px;
       margin: 0 auto;
+
+      @include mixins.responsive('sm') {
+        max-width: 380px;
+      }
 
       &:after {
         animation: gradient-animation 3s ease alternate infinite;
